manifests/prd/victoria-metrics/HTTPRoute-vmsingle-victoria-metrics.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: vmsingle
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-k8s-stack
  name: vmsingle-victoria-metrics
  namespace: monitoring
spec:
  hostnames:
    - metrics.kidibox.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: apps
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: vmsingle-victoria-metrics
          port: 8428
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
